$Id$

TBD

* major overhaul of the javascript.  state is managed better now, and a lot
   of redundant code was removed.  there are more functions now, but the
   functions are more precise with fewer side effects.
* retain expanded/collapsed state of controls between reloads
* one more baby step toward consolidated configfile/argument handling
* fixed color bug - use 'colors' not 'color' in config file
* added light/dark and green-tuple custom color palettes to config file
* fixed debugging controls in testcolor.cgi, showgraph.cgi, and show.cgi
* right-align text in the color tester
* more code consolidation between show/showgraph/showhost/showservice
* update the documentation: README, INSTALL, TODO
* new configuration options (see nagiosgraph.conf for details):
    showtitle
    showdesc
    showgraphtitle
    graphonly
    hidelegend
    hidengtitle
    lineformat
    plotasLINE1, plotasLINE2, plotasLINE3, plotasAREA, plotasTICK
    negate
    nagioscgiurl
    nagiosgraphcgiurl
    refresh
    geometries
    expand_timeall, expand_timehost, expand_timeservice
* modified configuration options:
    'time' is now 'timeall'
    timeall, timehost, timeservice take comma-delimited lists
* deleted configuration options:
    nolabels
    graphlabels
    large
    small
* host and service are no longer required args.  just do the right thing.
* use same controls layout for show, showhost, showservice
* optional removal of <h1>Nagiosgraph</h1> for more graph and less text
* adjust time period title layout
* control on each time period to collapse/expand that period
* (partially) fixed prev/next controls
* added labels to time periods
* put http refresh interval into config file
* eliminate tt and strong tags, replace with css
* more consolidation of show/showhost/showservice
* when missing translation, instruct to put translation in .conf not .pm
* optionally show html title by each graph
* optionally show data set names by each graph